--- a/index.html
+++ b/index.html
@@ -5,101 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>PROVA - Social Engineering e Cyber Security</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #0e1621;
-      color: #f0f0f0;
-      margin: 0;
-      padding: 0 20px;
-    }
-    header {
-      background-color: #031c2a;
-      padding: 30px 20px;
-      text-align: center;
-      border-bottom: 2px solid #1f8ecd;
-    }
-    header h1 {
-      margin: 0 0 10px 0;
-      color: #1f8ecd;
-      font-weight: 700;
-    }
-    header p {
-      font-size: 1.2em;
-      color: #a1c3e8;
-      margin: 0;
-    }
-    section {
-      margin: 40px auto;
-      max-width: 900px;
-      padding: 0 20px;
-    }
-    h2 {
-      color: #1f8ecd;
-      border-bottom: 2px solid #1f8ecd;
-      padding-bottom: 5px;
-      margin-bottom: 20px;
-    }
-    h3 {
-      color: #72b8f9;
-      margin-top: 30px;
-    }
-    ul {
-      list-style: none;
-      padding-left: 0;
-    }
-    ul li {
-      margin-bottom: 10px;
-      font-size: 1.1em;
-    }
-    a {
-      color: #72b8f9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    form label {
-      display: block;
-      margin-top: 15px;
-      font-weight: 600;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border: none;
-      border-radius: 4px;
-      font-size: 1em;
-    }
-    form textarea {
-      height: 120px;
-      resize: vertical;
-    }
-    form button {
-      margin-top: 20px;
-      background-color: #1f8ecd;
-      border: none;
-      color: white;
-      padding: 12px 20px;
-      font-size: 1.1em;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-    form button:hover {
-      background-color: #155a8a;
-    }
-    footer {
-      text-align: center;
-      padding: 15px 10px;
-      font-size: 0.9em;
-      color: #7b7b7b;
-      background-color: #031c2a;
-      border-top: 1px solid #1f8ecd;
-      margin-top: 50px;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -107,59 +12,68 @@
     <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
   </header>
 
-  <section id="chi-siamo">
-    <h2>Chi siamo</h2>
-    <p>PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.</p>
-  </section>
+  <nav>
+    <a href="index.html">🏠 Home</a>
+    <a href="githubnotiziaclicfix.html">📰 Notizie</a>
+  </nav>
 
-  <section id="servizi">
-    <h2>Social Engineering Concept</h2>
-    <h3>Servizi di Social Engineering</h3>
-    <ul>
-      <li>📧 Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
-      <li>📞 Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
-      <li>🎭 Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
-      <li>🏢 Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
-      <li>🎓 Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
-    </ul>
-  </section>
+  <main>
+    <section id="chi-siamo">
+      <h2>Chi siamo</h2>
+      <p><strong>PROVA</strong> è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.</p>
+    </section>
 
-  <section id="training">
-    <h2>Security Training</h2>
-  </section>
+    <section id="social-engineering-concept">
+      <h2>Social Engineering Concept</h2>
+      <h3>Servizi di Social Engineering</h3>
+      <ul>
+        <li>📧 <strong>Phishing simulato:</strong> Test di email ingannevoli per valutare la resilienza del personale.</li>
+        <li>📞 <strong>Vishing:</strong> Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
+        <li>🎭 <strong>Pretexting:</strong> Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
+        <li>🏢 <strong>Accesso fisico simulato:</strong> Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
+        <li>🎓 <strong>Formazione personalizzata:</strong> Workshop e training per sensibilizzare e proteggere il personale.</li>
+      </ul>
+    </section>
 
-  <section id="notizie">
-    <h2>Notizie dal nostro team</h2>
-    <article>
-      <h3>🧠 Il lato umano della sicurezza informatica</h3>
-      <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
-    </article>
-    <article>
-      <h3>📬 Phishing: riconoscere le email truffa</h3>
-      <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
-    </article>
-    <article>
-      <h3>Ultima notizia</h3>
-      <p><a href="githubnotiziaclicfix.html">Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</a></p>
-    </article>
-  </section>
+    <section id="security-training">
+      <h2>Security Training</h2>
+    </section>
 
-  <section id="contatti">
-    <h2>Contattaci</h2>
-    <form action="mailto:info@prova.it" method="post" enctype="text/plain">
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome" required />
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" required />
-      <label for="messaggio">Messaggio</label>
-      <textarea id="messaggio" name="messaggio" required></textarea>
-      <button type="submit">Invia messaggio</button>
-    </form>
-    <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
-  </section>
+    <section id="notizie">
+      <h2>Notizie dal nostro team</h2>
+      <article>
+        <h3>🧠 Il lato umano della sicurezza informatica</h3>
+        <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
+      </article>
+
+      <article>
+        <h3>📬 Phishing: riconoscere le email truffa</h3>
+        <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
+      </article>
+
+      <article>
+        <h3>📌 Titolo importante nella sezione notizie</h3>
+        <p>Qui puoi mettere il testo o l’introduzione di una notizia importante evidenziata come richiesto.</p>
+      </article>
+    </section>
+
+    <section id="contattaci">
+      <h2>Contattaci</h2>
+      <form>
+        <label for="nome">Nome</label><br />
+        <input type="text" id="nome" name="nome" required /><br /><br />
+        <label for="email">Email</label><br />
+        <input type="email" id="email" name="email" required /><br /><br />
+        <label for="messaggio">Messaggio</label><br />
+        <textarea id="messaggio" name="messaggio" rows="5" required></textarea><br /><br />
+        <button type="submit">Invia messaggio</button>
+      </form>
+      <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
+    </section>
+  </main>
 
   <footer>
-    <p>© 2025 PROVA. Tutti i diritti riservati.</p>
+    © 2025 PROVA. Tutti i diritti riservati.
   </footer>
 </body>
 </html>
