--- a/index.html
+++ b/index.html
@@ -3,29 +3,40 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>PROVA - Social Engineering e Cyber Security</title>
+  <title>PROVA - Sicurezza e Social Engineering</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
-    <h1>Proteggi la tua azienda dalle minacce umane</h1>
+    <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
     <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
   </header>
 
   <nav>
-    <a href="index.html">🏠 Home</a>
-    <a href="githubnotiziaclicfix.html">📰 Notizie</a>
+    <ul>
+      <li><a href="#chi-siamo">Chi siamo</a></li>
+      <li><a href="#social-engineering">Social Engineering Concept</a></li>
+      <li><a href="#servizi">Servizi di Social Engineering</a></li>
+      <li><a href="#training">Security Training</a></li>
+      <li><a href="#notizie">Notizie dal nostro team</a></li>
+      <li><a href="#contatti">Contattaci</a></li>
+    </ul>
   </nav>
 
   <main>
     <section id="chi-siamo">
       <h2>Chi siamo</h2>
-      <p><strong>PROVA</strong> è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.</p>
+      <p>
+        PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.
+      </p>
     </section>
 
-    <section id="social-engineering-concept">
+    <section id="social-engineering">
       <h2>Social Engineering Concept</h2>
-      <h3>Servizi di Social Engineering</h3>
+    </section>
+
+    <section id="servizi">
+      <h2>Servizi di Social Engineering</h2>
       <ul>
         <li>📧 <strong>Phishing simulato:</strong> Test di email ingannevoli per valutare la resilienza del personale.</li>
         <li>📞 <strong>Vishing:</strong> Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
@@ -35,12 +46,13 @@
       </ul>
     </section>
 
-    <section id="security-training">
+    <section id="training">
       <h2>Security Training</h2>
     </section>
 
     <section id="notizie">
-      <h2>Notizie dal nostro team</h2>
+      <h2>📰 Notizie dal nostro team</h2>
+
       <article>
         <h3>🧠 Il lato umano della sicurezza informatica</h3>
         <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
@@ -52,20 +64,27 @@
       </article>
 
       <article>
-        <h3>📌 Titolo importante nella sezione notizie</h3>
-        <p>Qui puoi mettere il testo o l’introduzione di una notizia importante evidenziata come richiesto.</p>
+        <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+        <p>
+          <a href="githubnotiziaclicfix.html" target="_blank" style="color:#004080; font-weight:bold; text-decoration:none;">
+            Leggi l'articolo completo sulla tattica ClickFix →
+          </a>
+        </p>
       </article>
     </section>
 
-    <section id="contattaci">
+    <section id="contatti">
       <h2>Contattaci</h2>
       <form>
         <label for="nome">Nome</label><br />
-        <input type="text" id="nome" name="nome" required /><br /><br />
+        <input type="text" id="nome" name="nome" /><br /><br />
+
         <label for="email">Email</label><br />
-        <input type="email" id="email" name="email" required /><br /><br />
+        <input type="email" id="email" name="email" /><br /><br />
+
         <label for="messaggio">Messaggio</label><br />
-        <textarea id="messaggio" name="messaggio" rows="5" required></textarea><br /><br />
+        <textarea id="messaggio" name="messaggio" rows="4"></textarea><br /><br />
+
         <button type="submit">Invia messaggio</button>
       </form>
       <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
@@ -73,7 +92,7 @@
   </main>
 
   <footer>
-    © 2025 PROVA. Tutti i diritti riservati.
+    <p>© 2025 PROVA. Tutti i diritti riservati.</p>
   </footer>
 </body>
 </html>
