--- a/index.html
+++ b/index.html
@@ -3,217 +3,126 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>PROVA - Sicurezza e Social Engineering</title>
+<title>🛡️ Difendersi dalla tattica ClickFix</title>
 <style>
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #f5f9fc;
     color: #333;
-    margin: 0; padding: 0;
+    max-width: 900px;
+    margin: 2rem auto 3rem;
+    padding: 0 1rem;
   }
   header {
     background: #004080;
     color: white;
-    padding: 2rem;
+    padding: 2rem 1rem;
     text-align: center;
+    border-radius: 0 0 10px 10px;
   }
   header h1 {
     margin: 0;
-    font-size: 2.2rem;
-  }
-  header p {
-    font-size: 1.2rem;
-    margin-top: 0.5rem;
-    font-weight: 300;
-  }
-  nav {
-    background: #0073e6;
-    padding: 0.5rem 0;
-  }
-  nav ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    margin: 0; padding: 0;
-  }
-  nav ul li {
-    margin: 0 1rem;
-  }
-  nav ul li a {
-    color: white;
-    font-weight: 600;
-    text-decoration: none;
-    font-size: 1rem;
-    transition: color 0.3s;
-  }
-  nav ul li a:hover {
-    color: #ffcc00;
-  }
-  main {
-    max-width: 900px;
-    margin: 2rem auto;
-    padding: 0 1rem;
+    font-size: 2rem;
   }
   section {
-    margin-bottom: 2.5rem;
+    margin-top: 2rem;
   }
-  section h2 {
+  h2 {
     color: #004080;
     border-bottom: 3px solid #0073e6;
     padding-bottom: 0.3rem;
-    margin-bottom: 1rem;
   }
-  ul {
-    padding-left: 1.3rem;
-  }
-  ul li {
-    margin-bottom: 0.7rem;
+  p {
     font-size: 1.1rem;
+    line-height: 1.5;
+  }
+  ul, ol {
+    padding-left: 1.3rem;
+    font-size: 1.1rem;
+  }
+  ul li, ol li {
+    margin-bottom: 0.7rem;
   }
   ul li strong {
     color: #004080;
   }
-  article {
+  img {
+    display: block;
+    margin: 1rem auto;
+    max-width: 100%;
+    border-radius: 8px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.15);
+  }
+  pre {
     background: #e6f0ff;
-    padding: 1rem 1.5rem;
-    margin-bottom: 1rem;
     border-radius: 6px;
-    box-shadow: 1px 1px 5px rgba(0,0,0,0.1);
-  }
-  article h3 {
-    margin-top: 0;
-    color: #003366;
-  }
-  article p {
-    margin-bottom: 0;
-  }
-  a {
-    color: #004080;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  a:hover {
-    text-decoration: underline;
-    color: #ff9900;
-  }
-  form label {
-    font-weight: 600;
-  }
-  form input, form textarea {
-    width: 100%;
-    padding: 0.5rem;
-    margin-top: 0.3rem;
-    margin-bottom: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 1rem;
-  }
-  form button {
-    background: #0073e6;
-    color: white;
-    border: none;
-    padding: 0.7rem 1.5rem;
-    font-size: 1.1rem;
-    cursor: pointer;
-    border-radius: 4px;
-    transition: background 0.3s;
-  }
-  form button:hover {
-    background: #005bb5;
+    padding: 1rem;
+    font-size: 0.95rem;
+    overflow-x: auto;
   }
   footer {
+    margin-top: 3rem;
     text-align: center;
     font-size: 0.9rem;
     color: #777;
-    padding: 1rem 0;
     border-top: 1px solid #ddd;
+    padding: 1rem 0;
   }
 </style>
 </head>
 <body>
 <header>
-  <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
-  <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
+  <h1>🛡️ Quando il copia e incolla diventa un'arma: come difendersi dalla tattica ClickFix</h1>
 </header>
 
-<nav>
+<section>
+  <p>ClickFix è una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nell’indurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows, tipicamente utilizzando scorciatoie con cui l’utente meno esperto potrebbe avere poca dimestichezza.</p>
+
+  <p>Una campagna ClickFix inizia attirando la vittima su una pagina controllata dall’attore malevolo o inducendola ad aprire un documento inviato in allegato che conterranno il pretesto per spingere la vittima ad eseguire i comandi.</p>
+
+  <p>Gli attaccanti utilizzano due principali pretesti:</p>
+
   <ul>
-    <li><a href="#chi-siamo">Chi siamo</a></li>
-    <li><a href="#social-engineering">Social Engineering Concept</a></li>
-    <li><a href="#servizi">Servizi di Social Engineering</a></li>
-    <li><a href="#training">Security Training</a></li>
-    <li><a href="#notizie">Notizie dal nostro team</a></li>
-    <li><a href="#contatti">Contattaci</a></li>
+    <li>🛑 <strong>Finti CAPTCHA:</strong> l’utente sarà portato naturalmente a cliccare sul CAPTCHA che copierà a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.</li>
   </ul>
-</nav>
 
-<main>
-  <section id="chi-siamo">
-    <h2>Chi siamo</h2>
-    <p>
-      PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.
-    </p>
-  </section>
+  <img src="imag.jpg" alt="Immagine tattica ClickFix" />
 
-  <section id="social-engineering">
-    <h2>Social Engineering Concept</h2>
-  </section>
+  <ul>
+    <li>⚠️ <strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
+  </ul>
 
-  <section id="servizi">
-    <h2>Servizi di Social Engineering</h2>
-    <ul>
-      <li>📧 <strong>Phishing simulato:</strong> Test di email ingannevoli per valutare la resilienza del personale.</li>
-      <li>📞 <strong>Vishing:</strong> Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
-      <li>🎭 <strong>Pretexting:</strong> Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
-      <li>🏢 <strong>Accesso fisico simulato:</strong> Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
-      <li>🎓 <strong>Formazione personalizzata:</strong> Workshop e training per sensibilizzare e proteggere il personale.</li>
-    </ul>
-  </section>
+  <p>Le campagne fino ad ora osservate utilizzavano tre diverse locazioni in cui incollare ed eseguire il codice:</p>
+  <ol>
+    <li>Finestra Esegui di Windows lanciata mediante la scorciatoia WIN+R</li>
+    <li>Barra degli indirizzi di Esplora Risorse, aperto tramite la scorciatoia WIN+E</li>
+    <li>Finestre di terminale, sia CMD che PowerShell, talvolta fatte avviare tramite la scorciatoia WIN+X</li>
+  </ol>
 
-  <section id="training">
-    <h2>Security Training</h2>
-  </section>
+  <p>Per proteggere i propri dispositivi da questa tattica è opportuno adottare una serie di misure preventive atte a bloccare l'attacco, in particolar modo quando sono utilizzati da utenti meno esperti. Ecco alcune delle principali difese:</p>
 
-  <section id="notizie">
-    <h2>📰 Notizie dal nostro team</h2>
+  <ul>
+    <li>🔒 <strong>Disabilitare il comando Esegui:</strong> aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\Explorer</code> un valore DWORD 32-bit con nome <code>NoRun</code> ed impostarlo ad 1. Questa modifica blocca le campagne che utilizzano la finestra di Esegui o la barra dell’Esplora Risorse.</li>
 
-    <article>
-      <h3>🧠 Il lato umano della sicurezza informatica</h3>
-      <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
-    </article>
+    <li>🔐 <strong>Disabilitare CMD e PowerShell per l’utente:</strong>
+      <ul>
+        <li>Aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows</code> un valore DWORD 32-bit con nome <code>DisableCMD</code> ed impostarlo ad 1.</li>
+        <li>Aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows\PowerShell</code> un valore DWORD 32-bit con nome <code>DisablePowerShell</code> ed impostarlo ad 1.</li>
+      </ul>
+      Questa modifica impedisce l’utilizzo sia del prompt dei comandi, sia della PowerShell, bloccando anche le campagne che inducono l’utente ad aprire una finestra di terminale.
+    </li>
 
-    <article>
-      <h3>📬 Phishing: riconoscere le email truffa</h3>
-      <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
-    </article>
-
-    <article>
-      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
-      <p>
-        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
-          Leggi l'articolo completo sulla tattica ClickFix →
-        </a>
-      </p>
-    </article>
-  </section>
-
-  <section id="contatti">
-    <h2>Contattaci</h2>
-    <form>
-      <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome" />
-
-      <label for="email">Email</label>
-      <input type="email" id="email" name="email" />
-
-      <label for="messaggio">Messaggio</label>
-      <textarea id="messaggio" name="messaggio" rows="4"></textarea>
-
-      <button type="submit">Invia messaggio</button>
-    </form>
-    <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
-  </section>
-</main>
+    <li>✂️ <strong>Disabilitare la Clipboard:</strong> creare uno script in PowerShell che venga eseguito in background ad ogni avvio con il seguente codice:
+      <pre>
+while($true){
+  Set-Clipboard -Value "La Clipboard è stata disabilitata su questo dispositivo"
+  sleep 100
+}
+      </pre>
+      Questa modifica rimpiazza costantemente il valore della clipboard con il messaggio "La Clipboard è stata disabilitata su questo dispositivo", impedendo alle potenziali vittime di copiare ed incollare codice malevolo.
+    </li>
+  </ul>
+</section>
 
 <footer>
   <p>© 2025 PROVA. Tutti i diritti riservati.</p>
