--- a/index.html
+++ b/index.html
@@ -3,55 +3,92 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Articolo ClickFix - PROVA</title>
+<title>PROVA - Sicurezza e Social Engineering</title>
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 <header>
-  <h1>🛡️ Quando il copia e incolla diventa un'arma: ClickFix</h1>
+  <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
+  <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
 </header>
 
+<nav>
+  <ul>
+    <li><a href="#chi-siamo">Chi siamo</a></li>
+    <li><a href="#social-engineering">Social Engineering Concept</a></li>
+    <li><a href="#servizi">Servizi di Social Engineering</a></li>
+    <li><a href="#training">Security Training</a></li>
+    <li><a href="#notizie">Notizie dal nostro team</a></li>
+    <li><a href="#contatti">Contattaci</a></li>
+  </ul>
+</nav>
+
 <main>
-  <article>
-    <p>ClickFix è una tattica di Social Engineering che ha preso piede nel corso del 2024 e consiste nell’indurre le vittime ad incollare ed eseguire comandi malevoli su dispositivi desktop Windows, tipicamente utilizzando scorciatoie con cui l’utente meno esperto potrebbe avere poca dimestichezza.</p>
+  <section id="chi-siamo">
+    <h2>Chi siamo</h2>
+    <p>
+      PROVA è un team di esperti in social engineering, pronto a mettere alla prova la sicurezza umana della tua azienda con attacchi simulati e formazione mirata. La nostra missione è proteggere la tua organizzazione dai rischi legati all'ingegneria sociale, la minaccia più insidiosa e meno tangibile.
+    </p>
+  </section>
 
-    <p>Una campagna ClickFix inizia attirando la vittima su una pagina controllata dall’attore malevolo o inducendola ad aprire un documento inviato in allegato che conterranno il pretesto per spingere la vittima ad eseguire i comandi.</p>
+  <section id="social-engineering">
+    <h2>Social Engineering Concept</h2>
+  </section>
 
-    <p>Gli attaccanti utilizzano due principali pretesti:</p>
-
+  <section id="servizi">
+    <h2>Servizi di Social Engineering</h2>
     <ul>
-      <li><strong>Finti CAPTCHA:</strong> l’utente sarà portato naturalmente a cliccare sul CAPTCHA che copierà a sua insaputa un codice malevolo negli appunti. Successivamente gli verranno mostrate delle finte istruzioni per risolverlo, inducendolo ad incollare il codice nascosto ed eseguirlo premendo invio.</li>
-      <li><strong>Finti messaggi di errore:</strong> le pagine o documenti conterranno finti file Office, finti link a riunioni dalle principali piattaforme (Meet, Zoom, Teams) e siti noti con presunti errori ed un pulsante da cliccare per risolverli. In maniera simile a quanto avviene per il finto CAPTCHA, al click viene copiato un codice ad insaputa della vittima e contestualmente vengono mostrate delle istruzioni da seguire. Alcune varianti della campagna non contengono il bottone da cliccare ma mostrano direttamente il codice da copiare con le relative istruzioni.</li>
+      <li>📧 <strong>Phishing simulato:</strong> Test di email ingannevoli per valutare la resilienza del personale.</li>
+      <li>📞 <strong>Vishing:</strong> Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
+      <li>🎭 <strong>Pretexting:</strong> Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
+      <li>🏢 <strong>Accesso fisico simulato:</strong> Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
+      <li>🎓 <strong>Formazione personalizzata:</strong> Workshop e training per sensibilizzare e proteggere il personale.</li>
     </ul>
+  </section>
 
-    <p>Le campagne fino ad ora osservate utilizzavano tre diverse locazioni in cui incollare ed eseguire il codice:</p>
+  <section id="training">
+    <h2>Security Training</h2>
+  </section>
 
-    <ol>
-      <li>finestra Esegui di Windows lanciata mediante la scorciatoia WIN+R</li>
-      <li>barra degli indirizzi di Esplora Risorse, aperto tramite la scorciatoia WIN+E</li>
-      <li>Finestre di terminale, sia CMD che PowerShell, talvolta fatte avviare tramite la scorciatoia WIN+X</li>
-    </ol>
+  <section id="notizie">
+    <h2>📰 Notizie dal nostro team</h2>
 
-    <p>Per proteggere i propri dispositivi da questa tattica è opportuno adottare una serie di misure preventive atte a bloccare l'attacco, in particolar modo quando sono utilizzati da utenti meno esperti. Ecco alcune delle principali difese:</p>
+    <article>
+      <h3>🧠 Il lato umano della sicurezza informatica</h3>
+      <p>Analizziamo come le vulnerabilità umane siano spesso la porta d'ingresso più facile per gli attacchi informatici.</p>
+    </article>
 
-    <ul>
-      <li><strong>Disabilitare il comando Esegui:</strong> aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Microsoft\Windows\CurrentVersion\Policies\Explorer</code> un valore DWORD 32-bit con nome “NoRun” ed impostarlo ad 1. Questa modifica blocca le campagne che utilizzano la finestra di Esegui o la barra dell’Esplora Risorse.</li>
-      <li><strong>Disabilitare CMD e PowerShell per l’utente:</strong>
-        <ul>
-          <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows</code> un valore DWORD 32-bit con nome “DisableCMD” ed impostarlo ad 1.</li>
-          <li>aggiungere alla chiave di registro <code>HKEY_CURRENT_USER\Software\Policies\Microsoft\Windows\PowerShell</code> un valore DWORD 32-bit con nome “DisablePowerShell” ed impostarlo ad 1.</li>
-        </ul>
-      </li>
-      <li><strong>Disabilitare la Clipboard:</strong> creare uno script in PowerShell che venga eseguito in background ad ogni avvio con il seguente codice:
-        <pre>
-while($true){
-  Set-Clipboard -Value "La Clipboard è stata disabilitata su questo dispositivo"
-  sleep 100
-}
-        </pre>
-      </li>
-    </ul>
-  </article>
+    <article>
+      <h3>📬 Phishing: riconoscere le email truffa</h3>
+      <p>Scopri le tecniche più comuni utilizzate per ingannare gli utenti e come proteggerti efficacemente.</p>
+    </article>
+
+    <article>
+      <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
+      <p>
+        <a href="githubnotiziaclicfix.html" target="_blank" rel="noopener noreferrer">
+          Leggi l'articolo completo sulla tattica ClickFix →
+        </a>
+      </p>
+    </article>
+  </section>
+
+  <section id="contatti">
+    <h2>Contattaci</h2>
+    <form>
+      <label for="nome">Nome</label>
+      <input type="text" id="nome" name="nome" />
+
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" />
+
+      <label for="messaggio">Messaggio</label>
+      <textarea id="messaggio" name="messaggio" rows="4"></textarea>
+
+      <button type="submit">Invia messaggio</button>
+    </form>
+    <p>Oppure scrivici a: <a href="mailto:info@prova.it">info@prova.it</a></p>
+  </section>
 </main>
 
 <footer>
