--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="#social-engineering">Social Engineering Concept</a></li>
     <li><a href="#servizi">Servizi di Social Engineering</a></li>
     <li><a href="#training">Security Training</a></li>
-    <li><a href="#notizie">Notizie dal nostro team</a></li>
+    <li><a href="#notizie">📰 Notizie dal nostro team</a></li>
     <li><a href="#contatti">Contattaci</a></li>
   </ul>
 </nav>
@@ -33,6 +33,7 @@
 
   <section id="social-engineering">
     <h2>Social Engineering Concept</h2>
+    <p>Scopri cosa si nasconde dietro alle tattiche più sofisticate di ingegneria sociale e come difendersi efficacemente.</p>
   </section>
 
   <section id="servizi">
@@ -48,6 +49,7 @@
 
   <section id="training">
     <h2>Security Training</h2>
+    <p>Offriamo corsi e workshop pratici per migliorare la consapevolezza e la preparazione del tuo team.</p>
   </section>
 
   <section id="notizie">
@@ -77,13 +79,13 @@
     <h2>Contattaci</h2>
     <form>
       <label for="nome">Nome</label>
-      <input type="text" id="nome" name="nome" />
+      <input type="text" id="nome" name="nome" placeholder="Il tuo nome" required />
 
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" />
+      <input type="email" id="email" name="email" placeholder="La tua email" required />
 
       <label for="messaggio">Messaggio</label>
-      <textarea id="messaggio" name="messaggio" rows="4"></textarea>
+      <textarea id="messaggio" name="messaggio" rows="4" placeholder="Scrivi qui il tuo messaggio" required></textarea>
 
       <button type="submit">Invia messaggio</button>
     </form>
