--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>PROVA - Sicurezza e Social Engineering</title>
 <link rel="stylesheet" href="style.css" />
+<style>
+  body {
+    background-color: rgba(173, 216, 230, 0.3); /* celeste chiaro trasparente */
+  }
+</style>
 </head>
 <body>
 <header>
   <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
-  <p>Specialisti in Social Engineering e Cyber Security: simulazioni e formazione .</p>
+  <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
 </header>
 
 <nav>
@@ -54,7 +59,6 @@
 
   <section id="notizie">
     <h2>📰 Notizie dal nostro team</h2>
-
     <article>
       <h3>🛡️ Difendersi dalla tattica ClickFix</h3>
       <p>
