--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
   <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
-  <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e protezione contro attacchi mirati.</p>
+  <p>Specialisti in Social Engineering e Cyber Security: simulazioni e formazione .</p>
 </header>
 
 <nav>
