--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 </head>
 <body>
 <header>
+ <header>
   <h1>🛡️ Proteggi la tua azienda dalle minacce umane</h1>
-  <p>Specialisti in Social Engineering e Cyber Security: simulazioni e formazione .</p>
+  <p>Specialisti in Social Engineering e Cyber Security: simulazioni, formazione e test personalizzati .</p>
 </header>
+
 
 <nav>
   <ul>
