--- a/index.html
+++ b/index.html
@@ -45,13 +45,14 @@
 
   <section id="servizi">
     <h2>Servizi di Social Engineering</h2>
-    <ul>
-      <li>📧 <strong>Phishing simulato:</strong> Test di email ingannevoli per valutare la resilienza del personale.</li>
-      <li>📞 <strong>Vishing:</strong> Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
-      <li>🎭 <strong>Pretexting:</strong> Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
-      <li>🏢 <strong>Accesso fisico simulato:</strong> Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
-      <li>🎓 <strong>Formazione personalizzata:</strong> Workshop e training per sensibilizzare e proteggere il personale.</li>
-    </ul>
+   <ul class="flex-list">
+  <li><span class="emoji">📧</span>Phishing simulato: Test di email ingannevoli per valutare la resilienza del personale.</li>
+  <li><span class="emoji">📞</span>Vishing: Simulazioni di telefonate fraudolente per misurare la risposta del team.</li>
+  <li><span class="emoji">🎭</span>Pretexting: Creazione di scenari falsi per testare l’accesso alle informazioni riservate.</li>
+  <li><span class="emoji">🏢</span>Accesso fisico simulato: Verifica delle vulnerabilità fisiche e degli accessi non autorizzati.</li>
+  <li><span class="emoji">🎓</span>Formazione personalizzata: Workshop e training per sensibilizzare e proteggere il personale.</li>
+</ul>
+
   </section>
 
   <section id="training">
